--- a/gateway-server/application.yml
+++ b/gateway-server/application.yml
@@ -3,6 +3,7 @@ spring:
         name: gateway-server
     main:
         web-application-type: reactive
+        allow-bean-definition-overriding: true
     
     cloud:
         gateway:
